# claude-vibe-template

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-docs  MANIFESTO_EN.md  MANIFESTO_RU.md  README.md  README.ru.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_profile.md
cowork-config/: customize-global.md  mcp-setup.md  notifications-setup-ntfy.md  scheduled-tasks.md
docs/: 00_БЫСТРЫЙ_СТАРТ.md  01_РОЛИ_РЕЖИМОВ.md  02_PREFLIGHT_ГЛАВНОЕ.md  03_ПРОТОКОЛ_АДАПТАЦИИ.md  04_RESET_PROTOCOL.md  05_FAQ.md  06_КАК_ДЛЯ_РЕБЁНКА.md  07_МЕТА_УРОК_ДРЕЙФА.md
profiles/: gov-44fz-bot.md  trading-terminal.md  web-app.md
project-template/: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  DECISIONS.md  Dockerfile  LAB_JOURNAL.md  Makefile  README.md  RESEARCH_LOG.md  TODO.md  docker-compose.yml  pyproject.toml
project-template/.claude/: settings.json
project-template/.claude/agents/: code-reviewer-ru.md  git-gatekeeper.md
project-template/.claude/commands/: security-pass.md  ship.md
project-template/.claude/hooks/: git_push_guard.ps1  journal_append.ps1  preflight_gate.ps1  preflight_reminder.ps1
project-template/.claude/skills/: environment-precheck.md  escalating-test-pyramid.md  preflight-research.md  report12-ru.md  reset-protocol.md  ritual-git.md  sort-pain.md
project-template/.github/: PR_TEMPLATE.md
project-template/.github/workflows/: ci.yml
scripts/: README.md  backup-321.cmd  backup-321.ps1  init-project.cmd  init-project.ps1  setup-wizard.cmd  setup-wizard.ps1
